--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/4.0.0/github-markdown.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/github-markdown-css@5.0.0/github-markdown.css"/>
     <link rel="stylesheet" href="./global.css">
     <title>Typing</title>
 </head>
 <body>
 <div id="app"></div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.2/umd/react.production.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react-is/17.0.2/umd/react-is.production.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.2/umd/react-dom.production.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/styled-components/5.2.3/styled-components.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/htm/3.0.4/htm.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
+<script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
+<script src="https://unpkg.com/react-is@17.0.2/umd/react-is.production.min.js"></script>
+<script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+<script src="https://unpkg.com/styled-components@5.3.3/dist/styled-components.min.js"></script>
+<script src="https://unpkg.com/htm@3.1.0/dist/htm.umd.js"></script>
+<script src="https://unpkg.com/marked@4.0.5/marked.min.js"></script>
 <script type="module" src="./render.js"></script>
 </body>
 </html>
